css/style.css
* {
	padding: 0;
	margin: 0;
}

h1, h2, h3, h4, h5, p, a, li {
	font-family: "AbelRegular";
	font-weight: normal;
	/* font-smooth: auto; */
	-webkit-font-smoothing: antialiased;
	font-size: 18px;
}

p {
	margin-block-start: .8em;
	margin-block-end: .8em;
	margin-inline-start: 0px;
	margin-inline-end: 0px;
}

ul {
	padding-inline-start: 40px;
	overflow: auto;
}

h2 {
	font-size: 32px;
}

h3 {
	font-size: 26px;
}

h4 {
	font-size: 22px;
}

h5 {
	font-size: 18px;
}

a:hover {
	text-decoration: none;
}

img {
	width: 100%;
}

.top_description {
	font-size: 36px;
	text-align: center;
}

:focus {
	outline: none;
}


/*CODE*/

.toggle-mnu {
	display: block;
	float: right;
	position: absolute;
	right: 30px;
	top: 0;
	text-align: center;
	line-height: 15;
	color:#000;
	width: 30px;
	height: 30px;
	margin: 25px auto 0;
	z-index: 99;
}
.toggle-mnu span:after,
.toggle-mnu span:before{
	content: " ";
	position: absolute;
	left: 0;
	top: -7px ;
}

.toggle-mnu span:after {
	top: 7px;
}

.toggle-mnu span {
	position: relative;
	display: block;
}

.toggle-mnu span,
.toggle-mnu span:after,
.toggle-mnu span:before{
  	width: 100%;
  	height: 3px;
 	background-color: #0b5783;
 	transition: all 0.5s;
 	backface-visibility: hidden;
 	border-radius: 5px;
}

/* on activation */
.toggle-mnu.on span {
	background-color: transparent;
}

.toggle-mnu.on span:before {
	transform: rotate(45deg) translate(3px, 3px);
}

.toggle-mnu.on span:after {
	transform: rotate(-45deg) translate(6px, -8px);
}



.toggle-mnu_fixed {
	display: block;
	float: right;
	position: absolute;
	right: 30px;
	top: 0;
	text-align: center;
	line-height: 15;
	color:#000;
	width: 30px;
	height: 30px;
	margin: 15px auto 0;
	z-index: 99;
	border: none;
	background: none;
}
.toggle-mnu_fixed span:after,
.toggle-mnu_fixed span:before{
	content: " ";
	position: absolute;
	left: 0;
	top: -7px ;
}

.toggle-mnu_fixed span:after {
	top: 7px;
}

.toggle-mnu_fixed span {
	position: relative;
	display: block;
}

.toggle-mnu_fixed span,
.toggle-mnu_fixed span:after,
.toggle-mnu_fixed span:before{
  	width: 100%;
  	height: 3px;
 	background-color: #0b5783;
 	transition: all 0.5s;
 	backface-visibility: hidden;
 	border-radius: 5px;
}

/* on activation */
.toggle-mnu_fixed.on span {
	background-color: transparent;
}

.toggle-mnu_fixed.on span:before {
	transform: rotate(45deg) translate(3px, 3px);
}

.toggle-mnu_fixed.on span:after {
	transform: rotate(-45deg) translate(7px, -8px);
}

.border_menu {
	content: " ";
	width: 30%;
	float: right;
	margin-right: 30px;
	height: 1px;
	background-color: #0b5783;
}

.header_menu {
	height: 55px;
	background-color: rgba(255, 255, 255, 0.84);
	position: relative;
	width: 100%;
	z-index: 99;
	position: relative;
}

.header_menu ul {
	list-style-type: none;
	float: right;
	margin-right: 50px;
}

.header_menu ul li {
	float: left;
	margin-top: 18px;
}

.header_menu ul li a {
	font-size: 16px;
	color: #0B5783;
	margin-right: 70px;
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;
}

.header_menu ul li a:hover {
	text-decoration: none;
	color: #000;
	-webkit-transform: scale(1.1);
	   -moz-transform: scale(1.1);
	    -ms-transform: scale(1.1);
	     -o-transform: scale(1.1);
	        transform: scale(1.1);
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;
	display: block;
}

.header_menu_fixed {
	background-color: rgba(255, 255, 255, 0.84);
	position: relative;
	width: 100%;
	z-index: 99;
	display: none;
}

.header_menu_fixed ul {
	list-style-type: none;
	float: right;
	margin-right: 50px;
}

.header_menu_fixed ul li {
	float: left;
	margin-top: 23px;
}

.header_menu_fixed ul li a {
	font-size: 16px;
	color: #0B5783;
	margin-right: 70px;
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;

}

.header_menu_fixed ul li a:hover {
	text-decoration: none;
	color: #000;
	-webkit-transform: scale(1.1);
	   -moz-transform: scale(1.1);
	    -ms-transform: scale(1.1);
	     -o-transform: scale(1.1);
	        transform: scale(1.1);
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;
	display: block;
}

.header_menu_fixed img {
	width: 185px;
	margin-left: 150px;
	margin-top: 6px;
	margin-bottom: 6px;
}

.headhesive {
	display: block;
	position: fixed;
	-webkit-transform: translateY(-280px);
	   -moz-transform: translateY(-280px);
	    -ms-transform: translateY(-280px);
	     -o-transform: translateY(-280px);
	        transform: translateY(-280px);
	-webkit-transition: 0.5s;
	   -moz-transition: 0.5s;
	    -ms-transition: 0.5s;
	     -o-transition: 0.5s;
	        transition: 0.5s;
}

.headhesive--stick{
	-webkit-transform: translateY(0);
	    -moz-transform: translateY(0);
	     -ms-transform: translateY(0);
	      -o-transform: translateY(0);
	         transform: translateY(0);
}



/*===========================================================*/
/*===========================================================*/
/*Section_3 EXPERTISE*/


.border {
	content: " ";
	width: 96%;
	margin: 0 auto;
	height: 1px;
	background-color: #0b5783;
	margin-bottom: 30px;
	margin-top: 30px;
}

.section_3 .visual {
	width: 50%;
}

/*

Figure out how the mixins should work

.section_3 .container:nth-of-type(odd) .visual {
	.pull-left();
}
*/

.section_3 {
	padding-bottom: 50px;
}

.section_3 h3 {
	color: #0b5783;
	text-align: center;
	margin-bottom: 25px;
	margin-top: 50px;
	font-weight: normal;
}

.section_3 .top_description {
	margin-top: 40px;
	margin-bottom: 40px;
}

.section_3 .container {
	text-align: justify;
}

.section_3 .container:nth-of-type(odd) img {
	padding-right: 15px;
}

.section_3 .container:nth-of-type(even) img {
	padding-left: 15px;
}

@media only screen and (max-width: 992px) {
	.section_3 .visual {
		width: 100%;
	}

	.section_3 .container:nth-of-type(odd) h4 {
		text-align: center !important;
	}

	.section_3 .container:nth-of-type(even) h4 {
		text-align: center !important;
	}
}

.section_3 h4 {
	color: #0b5783;
	margin-bottom: 15px;
	font-weight: normal;
}

.section_3 .container:nth-of-type(odd) h4 {
	text-align: left;
}

.section_3 .container:nth-of-type(even) h4 {
	text-align: right;
}

.icons {
	overflow: auto;
}

.section_3 .container:nth-of-type(odd) .icons {
	padding-left: 15px;
}

.section_3 .container:nth-of-type(even) .icons {
	padding-right: 15px;
}

.hack-no-padding {
	padding: 0px;
}

/*===========================================================*/
/*===========================================================*/
/*Section_4*/
.nomargin {
	margin: 0;
	padding: 0;
}

.section_4 {
	background-color: #06314b;
	color: #FFF;
	position: relative;
}

.section_4 .top_description {
	position: absolute;
	top: 25px;
	bottom: 0;
	right: 0;
	left: 0;
	z-index: 2;
}

.item {
	width: 100%;
	padding-top: 90px;
	padding-bottom: 90px;
	text-align: center;
	padding-right: 20px;
	padding-left: 20px;
	-webkit-transition: .4s;
	   -moz-transition: .4s;
	    -ms-transition: .4s;
	     -o-transition: .4s;
	        transition: .4s;
	position: relative;
}

.link a {
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background-color: transparent;
}

p.url {
	padding-bottom: 20px;
	font-size: 14px;
	color: #838E95;
}

.beliefs-icon-agile {
	background-image: url("../img/icon-agile.svg");
	background-repeat: no-repeat;
	background-position: top center;
	-webkit-background-size: 50px;
	     -o-background-size: 50px;
	        background-size: 50px;
	width: 70px;
	height: 70px;
	margin: 0 auto;
}

.beliefs-icon-twelve-factor {
	background-image: url("../img/icon-twelve-factor.svg");
	background-repeat: no-repeat;
	background-position: 110%top;
	-webkit-background-size: 57px;
	     -o-background-size: 57px;
	        background-size: 57px;
	width: 70px;
	height: 70px;
	margin: 0 auto;
}

.beliefs-icon-microservices {
	background-image: url("../img/icon-microservices.svg");
	background-repeat: no-repeat;
	background-position: top center;
	-webkit-background-size: 61px;
	     -o-background-size: 61px;
	        background-size: 61px;
	width: 70px;
	height: 70px;
	margin: 0 auto;
}

.beliefs-icon-teams {
	background-image: url("../img/icon-fowler.svg");
	background-repeat: no-repeat;
	background-position: center -6px;
	-webkit-background-size: 85px;
	     -o-background-size: 85px;
	        background-size: 85px;
	width: 70px;
	height: 70px;
	margin: 0 auto;
}

.item:hover {
	background-color: #052c43;
	-webkit-transition: .4s;
	   -moz-transition: .4s;
	    -ms-transition: .4s;
	     -o-transition: .4s;
	        transition: .4s;
	cursor: pointer;
}

.item h5 {
	padding-top: 20px;
	-webkit-transition: .3s;
	-moz-transition: .3s;
	-ms-transition: .3s;
	-o-transition: .3s;
	transition: .3s;
}

.item h5:hover {
	-webkit-transform: scale(1.1);
	   -moz-transform: scale(1.1);
	    -ms-transform: scale(1.1);
	     -o-transform: scale(1.1);
	        transform: scale(1.1);
	-webkit-transition: .3s;
	-moz-transition: .3s;
	-ms-transition: .3s;
	-o-transition: .3s;
	transition: .3s;
}

.item h5 a {
	color: #FFF;
}

.little {
	font-size: 16px;
	text-align: justify;
}

/*CONTACTS*/

.contacts {
	color: #FFF;
	padding-bottom: 30px;
	padding-top: 25px;
	background-image: url("../img/bg_contacts.jpg");
	background-position: center center;
}

.contacts_inner {
	z-index: 98;
}

.contacts_content ul {
	list-style-type: none;
}

.contacts_content ul li {
	position: relative;
	left: 25px;
}

.contacts_content img {
	width: 17px;
}

.contacts_content h3 {
	font-weight: normal;
	margin-bottom: 20px;
}

/*FOOTER*/

.footer {
	background-color: #bfc7cb;
}

.footer_nav ul {
	list-style-type: none;
	float: right;
}

.footer_nav ul li {
	float: left;
	margin-right: 50px;
	padding-top: 10px;
	padding-bottom: 10px;
}

.footer_nav ul li a {
	font-size: 14px;
	color: #246189;
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;
}

.footer_nav ul li a:hover {
	color: #000;
	-webkit-transform: scale(1.1);
	   -moz-transform: scale(1.1);
	    -ms-transform: scale(1.1);
	     -o-transform: scale(1.1);
	        transform: scale(1.1);
	-webkit-transition: .3s;
	   -moz-transition: .3s;
	    -ms-transition: .3s;
	     -o-transition: .3s;
	        transition: .3s;
	display: block;
}

